[package]
name = "butterfly-effect"
version = "0.1.0"
authors = ["lukki15"]
edition = "2018"
repository = "https://github.com/lukki15/butterfly-effect"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
  "bevy/bevy_audio",
  "bevy/mp3",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}
winit = {version = "0.24.0"}

petgraph = {version = "0.5.1"}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'
